# erl_tools

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  erl.sh  erl_tools.txt  erlang.mk  obj.md  rebar.config  rsp.erl  serv.erl  serv_tcp.erl  sf.erl  tools.erl  tools.hrl  websocket.md  widgets.txt
c_src/: Makefile  all.do  axo_connect.c  axo_connect.test.sh  bert.c  build.a.sh  build.elf.sh  build.o.sh  clean.do  default.a.do  default.elf.do  default.env  default.env.sh.do  default.install.do  default.o.do  elf.list.do  env.host.sh  env.sh  ftdi_connect.c  gdbstub_connect.c  gpio_poll.c  host.env.sh  install.do  main.c  out.list.do  port.h  sqlite3.c  tuntap.c  v4l.c  vtab.c
doc/: dataflow.org  exo.org  lod.org  managing.org  redo.org
ebin/: all.do  beam.tar.do  clean.do  default.beam.do  erl_tools.app  out.list.do
emacs/: erl_tools.el
include/: bert.h  port.h  system.h
js_src/: bert.js  live.js  method_call.js  mixin.js  tools.js  widgets.js  ws.js
rs/: Cargo.toml  Makefile
rs/src/: erl_rs.rs  etflog.rs  example.rs
rs_src/: Cargo.toml  Makefile
rs_src/src/: erl_rs.rs  example.rs  rawlog.rs
src/: accept.sh  afold.erl  axo.erl  axo_hub.erl  bert_rpc.erl  connect_bert_rpc.erl  cowboy_wrap.erl  db_base.erl  db_html.erl  db_kvstore.erl  debug.hrl  depgraph.erl  diff.erl  dsl.erl  ecat.erl  emacs.erl  epid.erl  epid_app.erl  epid_cprim.erl  epid_cproc.erl  epid_dag.erl  epid_proc.erl  erl_tools.app.src  et_tcp.erl  exml.erl  exml_dyn.erl  exo_lib.erl  exo_port.erl  expect.erl  expect.erl.expect  expect.expect  fold.erl  ftdi.erl  ftdi_hub.erl  (+76 more)
(+6 files in other folders)
