[package]
name = "erl_tools"
version = "0.0.0"
authors = [
	"Tom Schouten <tom@zwizwa.be>",
]

description = "Misc Rust routines for Erlang"
homepage = "https://github.com/zwizwa/erl_tools"
repository = "https://github.com/zwizwa/erl_tools"
license = "BSD3"

[dependencies]
libc = "0.2"
eetf = "0.3"

[lib]
name = "erl_tools"
path = "src/lib.rs"

